@@ -1,3 +1,10 @@
+== Version ?????? (tzdata v2011g) - ???????????
+
+* Allow the default value of the local_to_utc and period_for_local dst 
+  parameter to be specified globally with a Timezone.default_dst attribute.
+  Thanks to Kurt Werle for the suggestion and patch.
+
+
 == Version 0.3.28 (tzdata v2011g) - 13-Jun-2011
 
 * Add support for Ruby 1.9.3 (trunk revision 31668 and later). Thanks to 
